<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Origami Finder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="modelLabel">Model Name</string>
    <string name="bookLabel">Book Title</string>
    <string name="authorLabel">Author Name</string>
    <string name="creatorLabel">Creator Name</string>
    <string name="title_activity_maintain_model">Maintain Models</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_find_models">Find Models</string>
    <string name="title_activity_find_books">Find Books</string>
    <string name="title_activity_query_model_list">Query Model List</string>
    <string name="title_activity_query_book_list">Query Book List</string>
    <string name="title_activity_query_author_list">Query Author List</string>
    <string name="title_activity_add_model">Add/Edit Model</string>
    <string name="title_activity_add_book">Add/Edit Book</string>
    <string name="title_activity_add_author">Add/Edit Author</string>
    <string name="btnDoQueryLabel">Execute Query</string>
    <string name="search_hint">Enter a fragment to search for</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_query_models_by_name">Query Models By Name</string>
    <string name="some_text">Some North American Countries!</string>
    <string name="some_hint">Type here to filter&#8230;</string>
    <string name="info_model_name">Model Name:</string>
    <string name="info_model_creator">Creator:</string>
    <string name="info_book_title">Book Title:</string>
    <string name="info_model_type">Model Type:</string>
    <string name="info_model_on_page">On Page:</string>
    <string name="info_model_difficulty">Difficulty:</string>
    <string name="info_model_paper">Paper:</string>
    <string name="info_model_paper_pieces">Pieces:</string>
    <string name="info_glue">Glue:</string>
    <string name="info_cuts">Cuts:</string>
    <string name="loading_text">Loading Data</string>
    <string name="title_activity_show_book">Show Book Details</string>
    <string name="bookImageDescription">Cover of Book</string>
    <string name="sbTitleLabelText">Title</string>
    <string name="sbISBNLabelText">ISBN</string>
    <string name="sbModelCountText">Number of models: </string>
    <string name="defaultEmptyText"></string>

</resources>