<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/txtInfoBookISBN"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dip" >

    <TextView
        android:id="@+id/fmiModelNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/info_model_name" />

    <TextView
        android:id="@+id/fmiCreatorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fmiModelNameLabel"
        android:layout_below="@+id/fmiModelNameLabel"
        android:text="@string/info_model_creator" />

    <TextView
        android:id="@+id/fmiDifficultyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fmiCreatorLabel"
        android:layout_below="@+id/fmiCreatorLabel"
        android:text="@string/info_model_difficulty" />

    <TextView
        android:id="@+id/fmiModelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fmiModelNameLabel"
        android:layout_alignBottom="@+id/fmiModelNameLabel"
        android:layout_toRightOf="@+id/fmiModelNameLabel"
        android:text="Model Name" />

    <TextView
        android:id="@+id/fmiModelCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fmiCreatorLabel"
        android:layout_alignBottom="@+id/fmiCreatorLabel"
        android:layout_alignLeft="@+id/fmiModelName"
        android:text="Model Creator" />

    <TextView
        android:id="@+id/fmiModelDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fmiDifficultyLabel"
        android:layout_alignBottom="@+id/fmiDifficultyLabel"
        android:layout_toRightOf="@+id/fmiDifficultyLabel"
        android:text="Model Difficulty" />

    <TextView
        android:id="@+id/txtModelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fmiCreatorLabel"
        android:layout_alignParentBottom="true"
        android:text="TextView" />

</RelativeLayout>